--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "next": "15.0.2",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.53.1",
     "tailwind-merge": "^2.5.4",
