--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "eslint": "^8",
+    "eslint": "^8.57.1",
     "eslint-config-next": "15.0.2",
+    "eslint-plugin-react": "^7.37.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
